<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/LaunchDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_launch_detailed"
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/addCounterDialogTitle"
        android:textColor="?colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/counterTitle_addCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addCounterDialogCounterTitle"
            android:imeOptions="actionDone"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/counterGroups_addCounter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/addCounterDialogCounterGroup"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown_createCounter_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

